fix z-index isssue

--- a/src/components/style/account.module.css
+++ b/src/components/style/account.module.css
@@ -65,7 +65,7 @@ box-shadow:
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, 0.6);
-    z-index: 1100;
+    z-index: 2000;
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
